- add the rest of the tile images - add all the tiles in the canvas - add a .tileId argument, to deal with the special case of the flower/season tiles that don't have repeated tiles - fix, add a transparent background, and not white

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/utilities.js"></script>
         <script type="text/javascript" src="js/tile.js"></script>
+        <script type="text/javascript" src="js/map.js"></script>
         <!-- CONCATENATE_END -->
     </head>
 <body>
