--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script type="text/javascript" src="js/utilities.js"></script>
         <script type="text/javascript" src="js/tile.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
+        <script type="text/javascript" src="js/grid.js"></script>
         <!-- CONCATENATE_END -->
     </head>
 <body>
