- add a pyramid map - each tile now occupies 2 positions in the grid (so that we can position a tile half-way)

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <script type="text/javascript" src="libraries/tweenjs-0.5.0.min.js"></script>
 
         <!-- CONCATENATE_START -->
-        <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/utilities.js"></script>
         <script type="text/javascript" src="js/tile.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
+        <script type="text/javascript" src="js/map_pyramid.js"></script>
         <script type="text/javascript" src="js/grid.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
         <!-- CONCATENATE_END -->
     </head>
 <body>
