- don't draw the tiles when determining the tile's name - print to console the number of tiles left (this will be displayed in the game menu)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script type="text/javascript" src="js/map.js"></script>
         <script type="text/javascript" src="js/map_pyramid.js"></script>
         <script type="text/javascript" src="js/grid.js"></script>
+        <script type="text/javascript" src="js/game_menu.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <!-- CONCATENATE_END -->
     </head>
