- add the GameMenu html elements (tiles left / pairs left / restart / quit)

--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
 
     <canvas id="mainCanvas"></canvas>
 
+    <div id="GameMenu">
+        <div id="GameMenu-tilesLeft">Tiles Left: <span></span></div>
+        <div id="GameMenu-pairsLeft">Pairs Left: <span></span></div>
+
+        <div id="GameMenu-restart" class="button">Restart</div>
+        <div id="GameMenu-quit" class="button">Quit</div>
+    </div>
+
 </body>
 </html>
