- add option to shuffle the map - fix, use the tileName instead of the tileId when getting a new tile ( .getNextTile() ) - fix, clean the ALL_TILES array in .removeAll()

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div id="GameMenu-tilesLeft">Tiles Left: <span></span></div>
         <div id="GameMenu-pairsLeft">Pairs Left: <span></span></div>
 
+        <div id="GameMenu-shuffle" class="button">Shuffle</div>
         <div id="GameMenu-restart" class="button">Restart</div>
         <div id="GameMenu-quit" class="button">Quit</div>
     </div>
