--- a/index.html
+++ b/index.html
@@ -13,17 +13,29 @@
 
         <!-- CONCATENATE_START -->
         <script type="text/javascript" src="js/utilities.js"></script>
+        <script type="text/javascript" src="js/message.js"></script>
         <script type="text/javascript" src="js/tile.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
         <script type="text/javascript" src="js/map_pyramid.js"></script>
         <script type="text/javascript" src="js/grid.js"></script>
         <script type="text/javascript" src="js/game_menu.js"></script>
+        <script type="text/javascript" src="js/main_menu.js"></script>
+        <script type="text/javascript" src="js/game.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <!-- CONCATENATE_END -->
     </head>
 <body>
 
     <canvas id="mainCanvas"></canvas>
+
+    <div id="MainMenu">
+        <div id="MainMenu-selectMap">
+            <!-- a list of maps, where you click to select the map, then click startGame to start that map, or highScore to see the scores in that particular map -->
+            <div id="MainMenu-selectMap-pyramid">Pyramid</div>
+        </div>
+        <div id="MainMenu-startGame" class="button">Start Game</div>
+        <div id="MainMenu-highScore" class="button">High-score</div>
+    </div>
 
     <div id="GameMenu">
         <div id="GameMenu-tilesLeft">Tiles Left: <span></span></div>
@@ -33,6 +45,8 @@
         <div id="GameMenu-restart" class="button">Restart</div>
         <div id="GameMenu-quit" class="button">Quit</div>
     </div>
+
+    <div id="Message-container"></div>
 
 </body>
 </html>
