--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <!-- CONCATENATE_START -->
         <script type="text/javascript" src="js/utilities.js"></script>
+        <script type="text/javascript" src="js/high_score.js"></script>
         <script type="text/javascript" src="js/message.js"></script>
         <script type="text/javascript" src="js/tile.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
@@ -40,6 +41,7 @@
     <div id="GameMenu">
         <div id="GameMenu-tilesLeft">Tiles Left: <span></span></div>
         <div id="GameMenu-pairsLeft">Pairs Left: <span></span></div>
+        <div id="GameMenu-timer">Timer: <span></span></div>
 
         <div id="GameMenu-shuffle" class="button">Shuffle</div>
         <div id="GameMenu-restart" class="button">Restart</div>
