- show the high score in the main menu - fix, load the HighScore in the beginning of the program

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div id="MainMenu-selectMap-pyramid">Pyramid</div>
         </div>
         <div id="MainMenu-startGame" class="button">Start Game</div>
-        <div id="MainMenu-highScore" class="button">High-score</div>
+        <div id="MainMenu-highScore" class="button">High Score</div>
     </div>
 
     <div id="GameMenu">
@@ -49,6 +49,14 @@
     </div>
 
     <div id="Message-container"></div>
+
+    <div id="HighScore">
+        <h2 id="HighScore-title">High Score</h2>
+
+        <table id="HighScore-table"></table>
+
+        <div id="HighScore-back" class="button">Back</div>
+    </div>
 
 </body>
 </html>
