- draw small rectangles to represent the grid. you click there to set/clear a tile on that position - remove click events from the tile, only by pressing the grid can you add/remove a tile - add all the GridPosition() elements, according to the number of columns/lines - show which grid is selected currently, and be able to change it (although it still doesn't do anything for now)

--- a/map_editor/map_editor.html
+++ b/map_editor/map_editor.html
@@ -13,6 +13,22 @@
 
     <script type="text/javascript" src="{{ STATIC_URL }}grid_position.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}map_editor.js"></script>
+
+    <style type="text/css">
+
+        #menu > *
+            {
+            display: inline-block;
+            }
+
+        #Grids-container > *
+            {
+            display: inline-block;
+            margin: 0 10px;
+            cursor: pointer;
+            }
+
+    </style>
 </head>
 <body>
 
@@ -29,6 +45,8 @@
     <input id="lines" type="number" />
 
     <input type="button" value="New Map" />
+
+    <div id="Grids-currentGrid"></div>
 
     <div id="Grids-container"></div>
 </div>
