- fix some images - map editor:     - add GridPosition elements for all the grids     - show only the GridPosition of the selected grid, and hide the others

--- a/map_editor/map_editor.html
+++ b/map_editor/map_editor.html
@@ -16,6 +16,11 @@
 
     <style type="text/css">
 
+        #canvas
+            {
+            margin-left: 200px;
+            }
+
         #menu > *
             {
             display: inline-block;
