map editor: - add map name input element - be able to save the map

--- a/map_editor/map_editor.html
+++ b/map_editor/map_editor.html
@@ -40,6 +40,13 @@
 <canvas id="canvas"></canvas>
 
 <div id="menu">
+
+    <div id="Grids-container"></div>
+
+    <div id="Grids-currentGrid"></div>
+
+    <br />
+
     <label for="grids">Grids</label>
     <input id="grids" type="number" />
 
@@ -51,9 +58,13 @@
 
     <input type="button" value="New Map" />
 
-    <div id="Grids-currentGrid"></div>
+    <br />
 
-    <div id="Grids-container"></div>
+    <label for="mapName">Map Name</label>
+    <input id="mapName" type="text" />
+
+    <input id="saveMap" type="button" value="Save" />
+    <input id="loadMap" type="button" value="Load" />
 </div>
 
 </body>
