--- a/map_editor/map_editor.html
+++ b/map_editor/map_editor.html
@@ -26,7 +26,7 @@
             display: inline-block;
             }
 
-        #Grids-container > *
+        #Grids-container > *, #Grids-seeAll
             {
             display: inline-block;
             margin: 0 10px;
@@ -43,7 +43,8 @@
 
     <div id="Grids-container"></div>
 
-    <div id="Grids-currentGrid"></div>
+    <div id="Grids-seeAll">See All Grids</div>
+    <div id="Grids-currentGrid">All Grids.</div>
 
     <br />
 
