- show the number of tiles left (to have a complete map)

--- a/map_editor/map_editor.html
+++ b/map_editor/map_editor.html
@@ -46,6 +46,8 @@
     <div id="Grids-seeAll">See All Grids</div>
     <div id="Grids-currentGrid">All Grids.</div>
 
+    <div id="TilesLeft">Tiles Left: 144</div>
+
     <br />
 
     <label for="grids">Grids</label>
