- map_editor: implement the new map functionality (start a new map with the chosen number of grids/columns/lines)

--- a/map_editor/map_editor.html
+++ b/map_editor/map_editor.html
@@ -59,7 +59,7 @@
     <label for="lines">Lines</label>
     <input id="lines" type="number" />
 
-    <input type="button" value="New Map" />
+    <input id="newMap" type="button" value="New Map" />
 
     <br />
 
