- game:     - add new map (tower)     - be able to select between the 2 maps
- map_editor:
    - when showing all the tiles, make sure its added in order of the grids (the one in bottom first), so that the z-index of the tiles is according to the grid it belongs to

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <div id="MainMenu">
         <div id="MainMenu-selectMap">
             <!-- a list of maps, where you click to select the map, then click startGame to start that map, or highScore to see the scores in that particular map -->
-            <div id="MainMenu-selectMap-pyramid">Pyramid</div>
+            <div id="MainMenu-selectMap-pyramid" class="button">Pyramid</div>
+            <div id="MainMenu-selectMap-tower" class="button">Tower</div>
         </div>
         <div id="MainMenu-startGame" class="button">Start Game</div>
         <div id="MainMenu-highScore" class="button">High Score</div>
