--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <script type="text/javascript" src="js/tile.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
         <script type="text/javascript" src="js/grid.js"></script>
+        <script type="text/javascript" src="js/game.js"></script>
         <script type="text/javascript" src="js/game_menu.js"></script>
         <script type="text/javascript" src="js/main_menu.js"></script>
-        <script type="text/javascript" src="js/game.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <!-- CONCATENATE_END -->
     </head>
@@ -44,6 +44,8 @@
         <div id="GameMenu-timer">Timer: <span></span></div>
 
         <div id="GameMenu-shuffle" class="button">Shuffle</div>
+        <div id="GameMenu-shadow" class="button">Shadow: <span>Off</span></div>
+
         <div id="GameMenu-restart" class="button">Restart</div>
         <div id="GameMenu-quit" class="button">Quit</div>
     </div>
