- use flexbox to position the html elements (instead of absolute position with javascript, etc) - move part of the game menu to the left (info of the game), and other part to the right (buttons) - show a message when an un-selectable tile is clicked

--- a/index.html
+++ b/index.html
@@ -39,15 +39,20 @@
     </div>
 
     <div id="GameMenu">
-        <div id="GameMenu-tilesLeft">Tiles Left: <span></span></div>
-        <div id="GameMenu-pairsLeft">Pairs Left: <span></span></div>
-        <div id="GameMenu-timer">Timer: <span></span></div>
+        <div id="GameMenu-left">
+            <div id="GameMenu-tilesLeft">Tiles Left: <span></span></div>
+            <div id="GameMenu-pairsLeft">Pairs Left: <span></span></div>
+            <div id="GameMenu-timer">Timer: <span></span></div>
+            <div id="GameMenu-message"></div>
+        </div>
 
-        <div id="GameMenu-shuffle" class="button">Shuffle</div>
-        <div id="GameMenu-shadow" class="button">Shadow: <span>Off</span></div>
+        <div id="GameMenu-right">
+            <div id="GameMenu-shuffle" class="button">Shuffle</div>
+            <div id="GameMenu-shadow" class="button">Shadow: <span>Off</span></div>
 
-        <div id="GameMenu-restart" class="button">Restart</div>
-        <div id="GameMenu-quit" class="button">Quit</div>
+            <div id="GameMenu-restart" class="button">Restart</div>
+            <div id="GameMenu-quit" class="button">Quit</div>
+        </div>
     </div>
 
     <div id="Message-container"></div>
