- remember which map was selected in main menu - center #MainMenu-selectMap text

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
             <div id="MainMenu-selectMap-pyramid" class="button">Pyramid</div>
             <div id="MainMenu-selectMap-tower" class="button">Tower</div>
         </div>
-        <div id="MainMenu-startGame" class="button">Start Game</div>
-        <div id="MainMenu-highScore" class="button">High Score</div>
+
+        <div id="MainMenu-buttons">
+            <div id="MainMenu-startGame" class="button">Start Game</div>
+            <div id="MainMenu-highScore" class="button">High Score</div>
+        </div>
     </div>
 
     <div id="GameMenu">
