- move setting the tick event on window.onload instead of in Game.start(), so that it isn't constantly being set everytime a game starts - set the canvas width/height everytime a game starts (in case the window was resized, its an easy way to reset it (just start a new game))

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
         <div id="MainMenu-buttons">
             <div id="MainMenu-startGame" class="button">Start Game</div>
+            <div id="MainMenu-twoPlayers" class="button">Two Players</div>
             <div id="MainMenu-highScore" class="button">High Score</div>
         </div>
     </div>
