--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <!-- CONCATENATE_START -->
         <script type="text/javascript" src="js/utilities.js"></script>
         <script type="text/javascript" src="js/high_score.js"></script>
-        <script type="text/javascript" src="js/message.js"></script>
         <script type="text/javascript" src="js/tile.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
         <script type="text/javascript" src="js/grid.js"></script>
@@ -59,7 +58,7 @@
         </div>
     </div>
 
-    <div id="Message-container"></div>
+    <div id="Message">Loading 0%</div>
 
     <div id="HighScore">
         <h2 id="HighScore-title">High Score</h2>
