- refactor Tile/Grid, so that it doesn't keep track of all the tiles/grids. The Map will take care of that.     - so remove ALL_GRIDS and ALL_TILES from Grid/Tile (and associated code), and move to Map     - the reason is to prepare for the 2 player mode, where we'll need to have 2 independent maps     - same refactor for the map_editor, and move some code to a new Map() (different from the one in the game)

--- a/map_editor/map_editor.html
+++ b/map_editor/map_editor.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/tile.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/utilities.js"></script>
 
+    <script type="text/javascript" src="{{ STATIC_URL }}map.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}grid_position.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}map_editor.js"></script>
 
