--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="js/utilities.js"></script>
         <script type="text/javascript" src="js/high_score.js"></script>
         <script type="text/javascript" src="js/tile.js"></script>
+        <script type="text/javascript" src="js/map_information.js"></script>
         <script type="text/javascript" src="js/map.js"></script>
         <script type="text/javascript" src="js/grid.js"></script>
         <script type="text/javascript" src="js/game.js"></script>
@@ -43,9 +44,9 @@
 
     <div id="GameMenu">
         <div id="GameMenu-left">
-            <div id="GameMenu-tilesLeft">Tiles Left: <span></span></div>
-            <div id="GameMenu-pairsLeft">Pairs Left: <span></span></div>
-            <div id="GameMenu-timer">Timer: <span></span></div>
+            <!-- container for MapInformation, with the timer, tiles/pairs left of each map. -->
+            <div id="GameMenu-MapInformation"></div>
+
             <div id="GameMenu-message"></div>
         </div>
 
