- add new map (fish) - fix, the order which tiles are on top wasn't correct (check the fish map to see the problem)     - problem was with tiles that are half way next to others (for example column/line: 0,1 / 2,0 / 2,2)     - we need to add the tiles in a diagonal order (from top/left to bottom/right). it depends on the orientation of the image of the tile - map_editor:     - make sure the tiles added are below the grid_position dots, otherwise its dificult to click on the grid positions (since the tile is on top of it)

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <!-- a list of maps, where you click to select the map, then click startGame to start that map, or highScore to see the scores in that particular map -->
             <div id="MainMenu-selectMap-pyramid" class="button">Pyramid</div>
             <div id="MainMenu-selectMap-tower" class="button">Tower</div>
+            <div id="MainMenu-selectMap-fish" class="button">Fish</div>
         </div>
 
         <div id="MainMenu-buttons">
