--- a/map_editor/map_editor.html
+++ b/map_editor/map_editor.html
@@ -20,6 +20,7 @@
         #canvas
             {
             margin-left: 200px;
+            border: 1px solid black;
             }
 
         #menu > *
