- add new map: crossroads - fix, selecting the grid in the map editor, grid is 0-based so need to subtract 1 to the key that was pressed

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div id="MainMenu-selectMap-pyramid" class="button">Pyramid</div>
             <div id="MainMenu-selectMap-tower" class="button">Tower</div>
             <div id="MainMenu-selectMap-fish" class="button">Fish</div>
+            <div id="MainMenu-selectMap-crossroads" class="button">Crossroads</div>
         </div>
 
         <div id="MainMenu-buttons">
