--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <!-- CONCATENATE_START -->
         <script type="text/javascript" src="js/utilities.js"></script>
+        <script type="text/javascript" src="js/app_storage.js"></script>
         <script type="text/javascript" src="js/high_score.js"></script>
         <script type="text/javascript" src="js/tile.js"></script>
         <script type="text/javascript" src="js/map_information.js"></script>
