- specify the encoding in the 'index.html' file - update the libraries to latest version - remove 'soundjs' and 'tweenjs' (not really using them right now) - use the 'requestAnimationFrame' timing in 'createjs'

--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
         <title>Mahjong Solitaire</title>
 
         <link type="text/css" href="css/style.css" rel="stylesheet" />
 
-        <script type="text/javascript" src="libraries/jquery-2.0.3.min.js"></script>
-        <script type="text/javascript" src="libraries/easeljs-0.7.0.min.js"></script>
-        <script type="text/javascript" src="libraries/preloadjs-0.4.0.min.js"></script>
-        <script type="text/javascript" src="libraries/soundjs-0.5.0.min.js"></script>
-        <script type="text/javascript" src="libraries/tweenjs-0.5.0.min.js"></script>
+        <script type="text/javascript" src="libraries/jquery-2.2.0.min.js"></script>
+        <script type="text/javascript" src="libraries/easeljs-0.8.2.min.js"></script>
+        <script type="text/javascript" src="libraries/preloadjs-0.6.2.min.js"></script>
 
         <!-- CONCATENATE_START -->
         <script type="text/javascript" src="js/utilities.js"></script>
