- add 'help' button that highlights a random valid pair of tiles - fix, restarting in 2 player mode was restarting the game in 1 player mode

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div id="GameMenu-right">
             <div id="GameMenu-shuffle" class="button">Shuffle</div>
             <div id="GameMenu-shadow" class="button">Shadow: <span>Off</span></div>
+            <div id="GameMenu-help" class="button">Help</div>
 
             <div id="GameMenu-restart" class="button">Restart</div>
             <div id="GameMenu-quit" class="button">Quit</div>
