--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script type="text/javascript" src="libraries/easeljs-0.8.2.min.js"></script>
         <script type="text/javascript" src="libraries/preloadjs-0.6.2.min.js"></script>
 
-        <!-- CONCATENATE_START -->
+        <!-- build:js min.js -->
         <script type="text/javascript" src="js/utilities.js"></script>
         <script type="text/javascript" src="js/app_storage.js"></script>
         <script type="text/javascript" src="js/high_score.js"></script>
@@ -22,7 +22,7 @@
         <script type="text/javascript" src="js/game_menu.js"></script>
         <script type="text/javascript" src="js/main_menu.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
-        <!-- CONCATENATE_END -->
+        <!-- /build -->
     </head>
 <body>
 
