- switch the 'time' for a proper 'score' in the map information     - score is increased with each tile combination     - score is decreased if any help is used, and as time passes as well - add some information about the different tiles to the readme

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div id="GameMenu">
         <div id="GameMenu-left">
-            <!-- container for MapInformation, with the timer, tiles/pairs left of each map. -->
+            <!-- container for MapInformation, with the score, tiles/pairs left of each map. -->
             <div id="GameMenu-MapInformation"></div>
 
             <div id="GameMenu-message"></div>
