--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="libraries/jquery-2.2.0.min.js"></script>
         <script type="text/javascript" src="libraries/easeljs-0.8.2.min.js"></script>
         <script type="text/javascript" src="libraries/preloadjs-0.6.2.min.js"></script>
+        <script type="text/javascript" src="libraries/soundjs-0.6.2.min.js"></script>
 
         <!-- build:js min.js -->
         <script type="text/javascript" src="js/utilities.js"></script>
