- fix the position of the message and the main menu - add a 'Message' module to deal with showing/hiding the center message

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         <!-- build:js min.js -->
         <script type="text/javascript" src="js/utilities.js"></script>
+        <script type="text/javascript" src="js/message.js"></script>
         <script type="text/javascript" src="js/app_storage.js"></script>
         <script type="text/javascript" src="js/high_score.js"></script>
         <script type="text/javascript" src="js/tile.js"></script>
