- fix some issues in the map editor     - need to scale the tile to represent its actual size in the game (each tile occupies 2 positions in the grid)     - resize the canvas based on the number of columns/lines of the map - add new map named 'cross'

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <div id="MainMenu-selectMap-tower" class="button">Tower</div>
             <div id="MainMenu-selectMap-fish" class="button">Fish</div>
             <div id="MainMenu-selectMap-crossroads" class="button">Crossroads</div>
+            <div id="MainMenu-selectMap-cross" class="button">Cross</div>
         </div>
 
         <div id="MainMenu-buttons">
