--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <link type="text/css" href="css/style.css" rel="stylesheet" />
 
-        <script type="text/javascript" src="libraries/jquery-2.2.2.min.js"></script>
+        <script type="text/javascript" src="libraries/jquery-2.2.4.min.js"></script>
         <script type="text/javascript" src="libraries/easeljs-0.8.2.min.js"></script>
         <script type="text/javascript" src="libraries/preloadjs-0.6.2.min.js"></script>
         <script type="text/javascript" src="libraries/soundjs-0.6.2.min.js"></script>
@@ -44,7 +44,7 @@
             <div id="MainMenu-startGame" class="button">Start Game</div>
             <div id="MainMenu-twoPlayers" class="button">Two Players</div>
             <div id="MainMenu-highScore" class="button">High Score</div>
-            <a id="MainMenu-donate" class="button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=UQ6ZF2JKUC626" target="_blank">Donate</a>
+            <a id="MainMenu-donate" class="button" href="http://nbpt.eu/donate/" target="_blank">Donate</a>
         </div>
     </div>
 
