--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- build:js min.js -->
         <script type="text/javascript" src="js/utilities.js"></script>
         <script type="text/javascript" src="js/message.js"></script>
+        <script type="text/javascript" src="js/sound.js"></script>
         <script type="text/javascript" src="js/app_storage.js"></script>
         <script type="text/javascript" src="js/high_score.js"></script>
         <script type="text/javascript" src="js/tile.js"></script>
@@ -28,6 +29,7 @@
     </head>
 <body>
 
+    <div id="AudioControl" class="hidden">🔊&#xFE0E;</div>
     <canvas id="mainCanvas"></canvas>
 
     <div id="MainMenu">
