- build the maps list in the main menu dynamically

--- a/index.html
+++ b/index.html
@@ -34,12 +34,7 @@
 
     <div id="MainMenu">
         <div id="MainMenu-selectMap">
-            <!-- a list of maps, where you click to select the map, then click startGame to start that map, or highScore to see the scores in that particular map -->
-            <div id="MainMenu-selectMap-pyramid" class="button">Pyramid</div>
-            <div id="MainMenu-selectMap-tower" class="button">Tower</div>
-            <div id="MainMenu-selectMap-fish" class="button">Fish</div>
-            <div id="MainMenu-selectMap-crossroads" class="button">Crossroads</div>
-            <div id="MainMenu-selectMap-cross" class="button">Cross</div>
+            <!-- A list of maps, where you click to select the map, then click 'startGame' to start that map, or 'highScore' to see the scores of that particular map. Its built dynamically. -->
         </div>
 
         <div id="MainMenu-buttons">
