Add an initial 'nodejs/express' server for the 'map editor'.

--- a/map_editor/static/index.html
+++ b/map_editor/static/index.html
@@ -3,17 +3,17 @@
 <head>
     <title>Map Editor</title>
 
-    <script type="text/javascript" src="{{ STATIC_URL }}libraries/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}libraries/easeljs-0.8.2.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}libraries/preloadjs-0.6.2.min.js"></script>
+    <script type="text/javascript" src="static/libraries/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="static/libraries/easeljs-0.8.2.min.js"></script>
+    <script type="text/javascript" src="static/libraries/preloadjs-0.6.2.min.js"></script>
 
-    <script type="text/javascript" src="{{ STATIC_URL }}js/grid.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/tile.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/utilities.js"></script>
+    <script type="text/javascript" src="static/js/grid.js"></script>
+    <script type="text/javascript" src="static/js/tile.js"></script>
+    <script type="text/javascript" src="static/js/utilities.js"></script>
 
-    <script type="text/javascript" src="{{ STATIC_URL }}map.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}grid_position.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}map_editor.js"></script>
+    <script type="text/javascript" src="map.js"></script>
+    <script type="text/javascript" src="grid_position.js"></script>
+    <script type="text/javascript" src="map_editor.js"></script>
 
     <style type="text/css">
 
