--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <script type="text/javascript" src="libraries/soundjs-0.6.2.min.js"></script>
 
         <!-- build:js min.js -->
-        <script type="text/javascript" src="js/utilities.js"></script>
-        <script type="text/javascript" src="js/message.js"></script>
-        <script type="text/javascript" src="js/sound.js"></script>
-        <script type="text/javascript" src="js/app_storage.js"></script>
-        <script type="text/javascript" src="js/high_score.js"></script>
-        <script type="text/javascript" src="js/tile.js"></script>
-        <script type="text/javascript" src="js/map_information.js"></script>
-        <script type="text/javascript" src="js/map.js"></script>
-        <script type="text/javascript" src="js/grid.js"></script>
-        <script type="text/javascript" src="js/game.js"></script>
-        <script type="text/javascript" src="js/game_menu.js"></script>
-        <script type="text/javascript" src="js/main_menu.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="scripts/utilities.js"></script>
+        <script type="text/javascript" src="scripts/message.js"></script>
+        <script type="text/javascript" src="scripts/sound.js"></script>
+        <script type="text/javascript" src="scripts/app_storage.js"></script>
+        <script type="text/javascript" src="scripts/high_score.js"></script>
+        <script type="text/javascript" src="scripts/tile.js"></script>
+        <script type="text/javascript" src="scripts/map_information.js"></script>
+        <script type="text/javascript" src="scripts/map.js"></script>
+        <script type="text/javascript" src="scripts/grid.js"></script>
+        <script type="text/javascript" src="scripts/game.js"></script>
+        <script type="text/javascript" src="scripts/game_menu.js"></script>
+        <script type="text/javascript" src="scripts/main_menu.js"></script>
+        <script type="text/javascript" src="scripts/main.js"></script>
         <!-- /build -->
     </head>
 <body>
