--- a/index.html
+++ b/index.html
@@ -11,21 +11,7 @@
         <script type="text/javascript" src="libraries/preloadjs-0.6.2.min.js"></script>
         <script type="text/javascript" src="libraries/soundjs-0.6.2.min.js"></script>
 
-        <!-- build:js min.js -->
-        <script type="text/javascript" src="scripts/utilities.js"></script>
-        <script type="text/javascript" src="scripts/message.js"></script>
-        <script type="text/javascript" src="scripts/sound.js"></script>
-        <script type="text/javascript" src="scripts/app_storage.js"></script>
-        <script type="text/javascript" src="scripts/high_score.js"></script>
-        <script type="text/javascript" src="scripts/tile.js"></script>
-        <script type="text/javascript" src="scripts/map_information.js"></script>
-        <script type="text/javascript" src="scripts/map.js"></script>
-        <script type="text/javascript" src="scripts/grid.js"></script>
-        <script type="text/javascript" src="scripts/game.js"></script>
-        <script type="text/javascript" src="scripts/game_menu.js"></script>
-        <script type="text/javascript" src="scripts/main_menu.js"></script>
-        <script type="text/javascript" src="scripts/main.js"></script>
-        <!-- /build -->
+        <script type="module" src="scripts/main.js"></script>
     </head>
 <body>
 
