--- a/map_editor/static/index.html
+++ b/map_editor/static/index.html
@@ -7,13 +7,7 @@
     <script type="text/javascript" src="static/libraries/easeljs-0.8.2.min.js"></script>
     <script type="text/javascript" src="static/libraries/preloadjs-0.6.2.min.js"></script>
 
-    <script type="text/javascript" src="static/js/grid.js"></script>
-    <script type="text/javascript" src="static/js/tile.js"></script>
-    <script type="text/javascript" src="static/js/utilities.js"></script>
-
-    <script type="text/javascript" src="map.js"></script>
-    <script type="text/javascript" src="grid_position.js"></script>
-    <script type="text/javascript" src="map_editor.js"></script>
+    <script type="module" src="map_editor.js"></script>
 
     <style type="text/css">
 
