--- a/index.html
+++ b/index.html
@@ -6,55 +6,67 @@
 
         <link type="text/css" href="css/style.css" rel="stylesheet" />
 
-        <script type="text/javascript" src="libraries/jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="libraries/easeljs-0.8.2.min.js"></script>
-        <script type="text/javascript" src="libraries/preloadjs-0.6.2.min.js"></script>
-        <script type="text/javascript" src="libraries/soundjs-0.6.2.min.js"></script>
+        <script
+            type="text/javascript"
+            src="libraries/jquery-3.2.1.min.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="libraries/easeljs-0.8.2.min.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="libraries/preloadjs-0.6.2.min.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="libraries/soundjs-0.6.2.min.js"
+        ></script>
 
         <script type="module" src="scripts/main.js"></script>
     </head>
-<body>
+    <body>
+        <div id="AudioControl" class="hidden">🔊&#xFE0E;</div>
+        <canvas id="mainCanvas"></canvas>
 
-    <div id="AudioControl" class="hidden">🔊&#xFE0E;</div>
-    <canvas id="mainCanvas"></canvas>
+        <div id="MainMenu">
+            <div id="MainMenu-selectMap">
+                <!-- A list of maps, where you click to select the map, then click 'startGame' to start that map, or 'highScore' to see the scores of that particular map. Its built dynamically. -->
+            </div>
 
-    <div id="MainMenu">
-        <div id="MainMenu-selectMap">
-            <!-- A list of maps, where you click to select the map, then click 'startGame' to start that map, or 'highScore' to see the scores of that particular map. Its built dynamically. -->
+            <div id="MainMenu-buttons">
+                <div id="MainMenu-startGame" class="button">Start Game</div>
+                <div id="MainMenu-twoPlayers" class="button">Two Players</div>
+                <div id="MainMenu-highScore" class="button">High Score</div>
+            </div>
         </div>
 
-        <div id="MainMenu-buttons">
-            <div id="MainMenu-startGame" class="button">Start Game</div>
-            <div id="MainMenu-twoPlayers" class="button">Two Players</div>
-            <div id="MainMenu-highScore" class="button">High Score</div>
+        <div id="GameMenu">
+            <div id="GameMenu-left">
+                <!-- container for MapInformation, with the score, tiles/pairs left of each map. -->
+                <div id="GameMenu-MapInformation"></div>
+            </div>
+
+            <div id="GameMenu-right">
+                <div id="GameMenu-shuffle" class="button">Shuffle</div>
+                <div id="GameMenu-shadow" class="button"
+                    >Shadow: <span>Off</span></div
+                >
+                <div id="GameMenu-help" class="button">Help</div>
+
+                <div id="GameMenu-restart" class="button">Restart</div>
+                <div id="GameMenu-quit" class="button">Quit</div>
+            </div>
         </div>
-    </div>
 
-    <div id="GameMenu">
-        <div id="GameMenu-left">
-            <!-- container for MapInformation, with the score, tiles/pairs left of each map. -->
-            <div id="GameMenu-MapInformation"></div>
+        <div id="Message">Loading 0%</div>
+
+        <div id="HighScore">
+            <h2 id="HighScore-title">High Score</h2>
+
+            <table id="HighScore-table"></table>
+
+            <div id="HighScore-back" class="button">Back</div>
         </div>
-
-        <div id="GameMenu-right">
-            <div id="GameMenu-shuffle" class="button">Shuffle</div>
-            <div id="GameMenu-shadow" class="button">Shadow: <span>Off</span></div>
-            <div id="GameMenu-help" class="button">Help</div>
-
-            <div id="GameMenu-restart" class="button">Restart</div>
-            <div id="GameMenu-quit" class="button">Quit</div>
-        </div>
-    </div>
-
-    <div id="Message">Loading 0%</div>
-
-    <div id="HighScore">
-        <h2 id="HighScore-title">High Score</h2>
-
-        <table id="HighScore-table"></table>
-
-        <div id="HighScore-back" class="button">Back</div>
-    </div>
-
-</body>
+    </body>
 </html>
