--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 
         <script
             type="text/javascript"
-            src="libraries/easeljs-0.8.2.min.js"
+            src="libraries/easeljs.min.js"
         ></script>
         <script
             type="text/javascript"
-            src="libraries/preloadjs-0.6.2.min.js"
+            src="libraries/preloadjs.min.js"
         ></script>
         <script
             type="text/javascript"
-            src="libraries/soundjs-0.6.2.min.js"
+            src="libraries/soundjs.min.js"
         ></script>
 
         <script type="module" src="scripts/main.js"></script>
