--- a/map_editor/static/index.html
+++ b/map_editor/static/index.html
@@ -5,11 +5,11 @@
 
         <script
             type="text/javascript"
-            src="static/libraries/easeljs-0.8.2.min.js"
+            src="static/libraries/easeljs.min.js"
         ></script>
         <script
             type="text/javascript"
-            src="static/libraries/preloadjs-0.6.2.min.js"
+            src="static/libraries/preloadjs.min.js"
         ></script>
 
         <script type="module" src="map_editor.js"></script>
