Update the 'terser' library to latest version.

--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
 
         <link type="text/css" href="css/style.css" rel="stylesheet" />
 
-        <script
-            type="text/javascript"
-            src="libraries/easeljs.min.js"
-        ></script>
+        <script type="text/javascript" src="libraries/easeljs.min.js"></script>
         <script
             type="text/javascript"
             src="libraries/preloadjs.min.js"
         ></script>
-        <script
-            type="text/javascript"
-            src="libraries/soundjs.min.js"
-        ></script>
+        <script type="text/javascript" src="libraries/soundjs.min.js"></script>
 
         <script type="module" src="scripts/main.js"></script>
     </head>
