Rename some css IDs to have a more consistent name format.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <div id="AudioControl" class="hidden">🔊&#xFE0E;</div>
-        <canvas id="mainCanvas" class="hidden"></canvas>
+        <canvas id="MainCanvas" class="hidden"></canvas>
 
         <div id="MainMenu" class="hidden">
             <div id="MainMenu-selectMap">
