--- a/map_editor/static/index.html
+++ b/map_editor/static/index.html
@@ -33,9 +33,9 @@
         </style>
     </head>
     <body>
-        <canvas id="canvas"></canvas>
+        <canvas id="Canvas"></canvas>
 
-        <div id="menu">
+        <div>
             <div id="Grids-container"></div>
 
             <div id="Grids-seeAll">See All Grids</div>
@@ -45,24 +45,24 @@
 
             <br />
 
-            <label for="grids">Grids</label>
-            <input id="grids" type="number" />
+            <label for="Grids">Grids</label>
+            <input id="Grids" type="number" />
 
-            <label for="columns">Columns</label>
-            <input id="columns" type="number" />
+            <label for="Columns">Columns</label>
+            <input id="Columns" type="number" />
 
-            <label for="lines">Lines</label>
-            <input id="lines" type="number" />
+            <label for="Lines">Lines</label>
+            <input id="Lines" type="number" />
 
-            <input id="newMap" type="button" value="New Map" />
+            <input id="NewMap" type="button" value="New Map" />
 
             <br />
 
-            <label for="mapName">Map Name</label>
-            <input id="mapName" type="text" />
+            <label for="MapName">Map Name</label>
+            <input id="MapName" type="text" />
 
-            <input id="saveMap" type="button" value="Save" />
-            <input id="loadMap" type="button" value="Load" />
+            <input id="SaveMap" type="button" value="Save" />
+            <input id="LoadMap" type="button" value="Load" />
         </div>
     </body>
 </html>
