Use the html audio element to play the music.
- Only play the music during gameplay (not when on the main menus).
- Add another source for the music in '.mp3' (so it works on safari).

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     </head>
     <body>
         <div id="AudioControl" class="hidden">🔊&#xFE0E;</div>
+        <audio id="AudioElement" loop>
+            <source src="audio/Jaoan.ogg" type="audio/ogg" />
+            <source src="audio/Jaoan.mp3" type="audio/mp3" />
+        </audio>
+
         <canvas id="MainCanvas" class="hidden"></canvas>
 
         <div id="MainMenu" class="hidden">
