Add the icon as the webpage 'favicon'.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Mahjong Solitaire</title>
 
+        <link rel="shortcut icon" type="image/png" href="images/icon48.png" />
         <link type="text/css" href="css/style.css" rel="stylesheet" />
 
         <script type="text/javascript" src="libraries/easeljs.min.js"></script>
