--- a/map_editor/static/index.html
+++ b/map_editor/static/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
         <title>Map Editor</title>
+        <link
+            rel="shortcut icon"
+            type="image/png"
+            href="static/images/icon48.png"
+        />
 
         <script
             type="text/javascript"
